--- a/Competence.html
+++ b/Competence.html
@@ -50,15 +50,15 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead"> Lors de mes années en BTS SIO, j'ai pu aquérir de nombreuses compétences ! </p></div>
-                    <div class="col-lg-4 ms-auto"><p class="lead"></p> Les voicis ci-joint :     </div>
+                    <div class="col-lg-4 ms-auto"><p class="lead"> Lors de mes années en BTS SIO, j'ai pu acquérir de nombreuses compétences ! </p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead"></p> Les voici ci-joints :     </div>
                     
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/drive/folders/1x2-Yc9nYct8OWdSmUTxkRDeCeIp1iTwU">
                         <i class="fas fa-download me-2"></i>
-                        Mon tableau de compétences et plus d'information ici !
+                        Mon tableau de compétences et plus d'informations ici !
                     </a>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                         <h4 class="text-uppercase mb-4">Localisation :</h4>
                         <p class="lead mb-0">
                             62000 Arras
-                            pôle sup Baudimont, 12 rue Baudimont
+                            pôle sup Baudimont, 28 rue Baudimont
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
