--- a/stages.html
+++ b/stages.html
@@ -83,7 +83,7 @@
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/drive/folders/12pQGSebo43wtHmLcND8Bxg5Ebply1w4v">
                         <i class="fas fa-download me-2"></i>
-                        Attestation de présence et rapport journalier ici !
+                        Attestation de présence et rapport hebdomadaire ici !
                     </a>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                         <h4 class="text-uppercase mb-4">Localisation :</h4>
                         <p class="lead mb-0">
                             62000 Arras
-                            pôle sup Baudimont, 12 rue Baudimont
+                            pôle sup Baudimont, 28 rue Baudimont
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
