--- a/Techno.html
+++ b/Techno.html
@@ -54,26 +54,26 @@
                   <li>Podcast : <a href = " https://twimlai.com/" >https://twimlai.com/</a></li>
                   <li>Site Web <a href = "https://www.boursebacon.fr/2021/12/29/3-etf-pour-investir-dans-lintelligence-artificielle/" >https://www.boursebacon.fr/2021/12/29/3-etf-pour-investir-dans-lintelligence-artificielle/</a></li>
                 </ul>
-                <p> Pour Commencer, L'IA est un outil technologie qui vise à reproduire des comportements proches à celui des humains ( Inteligence Artificielle). Il existe 2 types d'IA :
+                <p> Pour Commencer, L'IA est un outil technologie qui vise à reproduire des comportements proches de celui des humains ( Inteligence Artificielle). Il existe 2 types d'IA :
                     - Les IA faibles : qui utilise les informations uniquement qui lui ont été transmis.
-                    - Les IA fortes : Apprend et créer leur expérience en communiquant avec l'Homme , il améliore son éfficacité à chaque intéraction.
-                    De plus, l'IA est basé sur le <strong>Machine Learning</strong> qui est une méthode d'apprentissage automatique qui analyse comme pourrait le faire les humains et répond donc aux attentes en s'adaptant à son environnement et des informations qui lui ont été transmises.
-                    Il existe aussi le <strong>Deep Learning</strong> qui est une méthode plus appronfondie du <strong>Machine Learning </strong> car il permet aux à rendre l'ordinateur plus autonome par le biais d'algorithmes qui s'améliorent de manière autonome lorsqu'il répond à une demande et cela sans l'intervention humaine.
+                    - Les IA fortes : elles apprennent et créent leur expérience en communiquant avec l'Homme et elles améliorent son éfficacité à chaque intéraction.
+                    De plus, l'IA est basée sur le <strong>Machine Learning</strong> qui est une méthode d'apprentissage automatique qui analyse comme pourraient le faire les humains et répond donc aux attentes en s'adaptant à son environnement et des informations qui lui ont été transmises.
+                    Il existe aussi le <strong>Deep Learning</strong> qui est une méthode plus approfondie du <strong>Machine Learning </strong> car il permet aux hommes de rendre l'ordinateur plus autonome par le biais d'algorithmes qui s'améliorent de manière autonome lorsqu'il répond à une demande et cela sans l'intervention humaine.
                 </p>
                 <p>TensorFlow.js est une bibliothèque JavaScript open source pour la formation et le déploiement de modèles d'apprentissage en profondeur (<strong> Deep learning </strong>) dans le navigateur. Il peut être utilisé pour créer des applications telles que la reconnaissance d'image en temps réel dans le navigateur.</p>
                 <p>AI Weekly est une newsletter hebdomadaire qui couvre les dernières nouvelles et tendances en matière d'IA, y compris les développements en matière d'apprentissage en profondeur et de traitement du langage naturel.</p>
                 <p>Le compte Twitter de TensorFlow est une excellente source d'informations sur les développements récents de la bibliothèque TensorFlow, ainsi que sur les applications de l'apprentissage en profondeur en général.</p>
                 <p>TWIML AI Podcast est un podcast dédié à l'apprentissage automatique et à l'IA en général, avec des interviews de leaders de l'industrie et des experts en IA.</p>
-                <p>Informations supplémentaire :</p>
+                <p>Informations supplémentaires :</p>
                 <ul>
-                  <li>En ce qui concerne les dernières tendances en matière d'IA, j'ai trouvé une IA très populaire en ce moment, son nom : Chat.GPT. C'est une IA ayant pour but de communiquer avec vous à l'écrit et elle est très poussé au niveau des réponses.
-                    seul bémol, ses données s'arrête à septembre 2021. Voici le site officiel de Chat.GPT : <a href = "https://openai.com/blog/chatgpt/">https://openai.com/blog/chatgpt/</a></li>
-                    <li> J'ai trouvé une vidéo récente française sur Chat.GPT qui raconte ce qu'est cette IA à travers plusieurs tématiques : <a href ="https://www.youtube.com/watch?v=OG2Y_R6fvvo&t=268s&ab_channel=HugoDécrypte">https://www.youtube.com/watch?v=OG2Y_R6fvvo&t=268s&ab_channel=HugoDécrypte</a></li>
-                <li>Enfin, je suis tombé sur un projet open source intéressant appelé ML5.js, qui est une bibliothèque JavaScript pour l'apprentissage automatique créée pour faciliter l'accès à l'IA pour les développeurs web. Le projet est disponible ici : <a href = "https://ml5js.org/"> https://ml5js.org/</a></li>
-                <li>L'IA dans les Virus : (En cour de construction)</a></li>
+                  <li>En ce qui concerne les dernières tendances en matière d'IA, j'en ai trouvé une très populaire en ce moment, son nom : Chat.GPT. C'est une IA ayant pour but de communiquer avec vous à l'écrit et elle est très poussée au niveau des réponses.
+                    Seul bémol, ses données sur l'histoire s'arrêtent à septembre 2021. Voici le site officiel de Chat.GPT : <a href = "https://openai.com/blog/chatgpt/">https://openai.com/blog/chatgpt/</a></li>
+                    <li> J'ai trouvé une vidéo récente française sur Chat.GPT qui raconte ce qu'est cette IA à travers plusieurs thématiques : <a href ="https://www.youtube.com/watch?v=OG2Y_R6fvvo&t=268s&ab_channel=HugoDécrypte">https://www.youtube.com/watch?v=OG2Y_R6fvvo&t=268s&ab_channel=HugoDécrypte</a></li>
+                <li>Enfin, je me suis intéressé à un projet open source intéressant appelé ML5.js, qui est une bibliothèque JavaScript pour l'apprentissage automatique créée pour faciliter l'accès à l'IA pour les développeurs web. Le projet est disponible ici : <a href = "https://ml5js.org/"> https://ml5js.org/</a></li>
+                <li>L'IA dans les Virus : (En cours de construction)</a></li>
                 <p>Pour aller plus loin :</p>
                 <ul>
-                <li>Je suis aussi tombé, dans un cadre un peu plus général, sur une extension google qui se nomme Daily.Dev, qui est une extension vous permettant de connaître les dernières nouveautés technologiques qui peuvent intéresser tout le monde. Donc juste en ouvrant votre navigateur, vous pouvez apprendre de nouvelles choses notament aussi sur les IAs.
+                <li>Je me suis aussi penché, dans un cadre un peu plus général, sur une extension google qui se nomme Daily.Dev, qui est une extension vous permettant de connaître les dernières nouveautés technologiques qui peuvent intéresser tout le monde. Donc juste en ouvrant votre navigateur, vous pouvez apprendre de nouvelles informations notamment aussi sur les IAs.
                      l'extension est disponible ici : <a href="https://daily.dev" > https://daily.dev</a></li>
                 
   </ul>
@@ -88,7 +88,7 @@
                         <h4 class="text-uppercase mb-4">Localisation :</h4>
                         <p class="lead mb-0">
                             62000 Arras
-                            pôle sup Baudimont, 12 rue Baudimont
+                            pôle sup Baudimont, 28 rue Baudimont
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
