--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                 <!-- About Section Content-->
                 <img class="masthead-avatar mb-5" src="assets/Romain.jpg" alt="..." />
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Je m'appelle Romain Callin, J'ai 19 ans et je suis dans l'heure actuelle étudiant en BTS SIO (Services Informatique aux Organisations) Option SLAM (orienté développement). Je cherche actuellement une alternance dans le domaine du développement informatique.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead"> Je suis quelqu'un qui apprend vite ! Je suis motivé et j'adore l'aspect du travail en équipe car j'aime le côté sociable que cela apporte et qui me donne envie de me pousser plus loin pour aider au mieux mon équipe. Pour en savoir plus sur moi, regardez mon CV ci-dessous ! </p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Je m'appelle Romain Callin, J'ai 19 ans et je suis actuellement étudiant en BTS SIO (Services Informatique aux Organisations) Option SLAM (orienté développement). Je cherche actuellement une alternance dans le domaine du développement informatique.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead"> Je suis quelqu'un qui apprend vite ! Motivé, j'adore l'aspect du travail en équipe car j'aime le côté sociable que cela apporte et qui me donne envie de me pousser plus loin pour aider au mieux mon équipe. Pour en savoir plus sur moi, regardez mon CV ci-dessous ! </p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -138,7 +138,7 @@
                 <div class="my-div">
                     <div class="text">
                       <h1>Douche intelligente :</h1>
-                      <p>Depuis quelques années, j'ai pour ambition de créer un douche intelligente dans le cadre d'un logement pour personne handicapé. La douche serait adapté pour tout type d'handicape (physique ou mentale). L'objectif de cette douche et d'être confortable et de pouvoir via des capteurs et une tablette connectée d'assister ces personnes à mobilité réduite sans interventions d'une personne tierse. </p>
+                      <p>Depuis quelques années, j'ai pour ambition de créer un douche intelligente dans le cadre d'un logement pour personne en situation de handicap. La douche serait adaptée pour tout type d'handicap (physique ou mental). L'objectif de cette douche est d'être confortable et de pouvoir, via des capteurs et une tablette connectée, d'assister ces personnes à mobilité réduite sans intervention d'une personne tierce. </p>
                     </div>
                     <div class="images">
                       <img src="assets/doucheh.jpg" alt="Image 1" class="image1">
@@ -156,7 +156,7 @@
                         <h4 class="text-uppercase mb-4">Localisation :</h4>
                         <p class="lead mb-0">
                             62000 Arras
-                            pôle sup Baudimont, 12 rue Baudimont
+                            pôle sup Baudimont, 28 rue Baudimont
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
@@ -204,7 +204,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/Almanach artésiens.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Voici un petit avant goût du site vitrine de l'Almanach Artésiens qui est un projet sur lequel j'ai travaillé. Le site est fait en html, CSS et JavaScript. Voici le lien allant au site : <a href ="https://almanach-artesien.fr">https://almanach-artesien.fr</a></p>
+                                    <p class="mb-4">Voici un petit avant goût du site vitrine de l'Almanach Artésien qui est un projet sur lequel j'ai travaillé. Le site est fait en html, CSS et JavaScript. Voici le lien allant au site : <a href ="https://almanach-artesien.fr">https://almanach-artesien.fr</a></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Fermer
@@ -268,7 +268,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/Evolve 2.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"> Ici, vous pouvez voir un avant goût de mon projet de site pour un entreprise fictive du nom d'EVOLVE qui est une entreprise de cybersécurité ! Le site a été crée en html, CSS et PHP.</p>
+                                    <p class="mb-4"> Ici, vous pouvez voir un avant goût de mon projet de site pour un entreprise fictive du nom d'EVOLVE qui est une entreprise de cybersécurité ! Le site a été créé en html, CSS et PHP.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Fermer
